--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,10 @@
 
     RewriteEngine On
 
+    # Handle Non-HTTPS...
+    RewriteCond %{HTTPS} !=on
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
